<resources>
    <string name="app_name">Arrigorriaga</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoic3Jqb24iLCJhIjoiY2szMzMydTduMDR0ZzNkcGpoMTlseXlrdSJ9.FVx9_XrgYlZcFlyHkHRO_Q</string>
    <string name="simple_offline_end_progress_success">Mapa descargado</string>
    <string name="basic_offline_deleted_toast">deleted</string>
    <string name="inicio_nombre">Zure izena idatzi</string>
    <string name="empezar_aventura">Hasi</string>
    <string name="continuar">Jarraitu</string>
    <string name="audio1">Kaixo! Ni mika naiz eta zuen laguntzailea izango
        naiz. Ez duzue imajinatzen zer nolako abentura
        miresgarria antolatu dudan! Ba al dakizue zertan
        datzan? Erantzuna ezezkoa bada, adi egon orain
        kontatuko dizuedana entzuteko. Prest? Prrrrrrr...
        Arrigorriagako ondare kulturalak ezagutzeari
        ekingo diogu!.
    </string>
    <string name="audio2">Gure herriko ondare kulturalak ezagutzeko eta
hauen historia ikasteko, Arrigorriagatik ibilbide bat
prestatu dut. Horretarako, zuen inguruan ageri
diren sei kultura ondare hautatu ditut eta ondare
bakoitzean jarduera eta erronka dibertigarri
batzuk topatuko dituzue. Gure herriari buruz gehiago jakin nahi baduzue, has dezagun
ibilbidea!</string>
    <string name="audio_p0">Beno beno neska-mutilak, lehenengo gunera
joateko, gakoa eman baino lehen, ondare
kulturala zer den gogoraraztea beharrezkoa
da. Gogoan duzue klasean landutakoa? Ba,
animo, hasi lehenengo galderarekin!</string>
    <string name="audio_p2">Orain gauden lekua udaletxe zaharra da, hau,
1940.urtean berreraiki zen, sute suntsigarri
baten ostean. Ondoan, udaletxe berria ikus
daiteke eta udaletxea izan baino lehen eskola
bat izan zen. Udaletxe berria eraikitzeko,
eskola zaharra eusten zuten harriak erabili
ziren.</string>
    <string name="audio_p3">Lagun maiteak, Arrigorriagako Andra Maria
Magdalena elizara heldu gara. Eliza honek,
Arrigorriagako batailan du jatorria
(870.urtean gutxi gora behera). Honen sorrera
IX. mendean dela uste da, nahiz eta jatorriko
eraikuntzatik ezer ez mantendu.</string>
    <string name="audio_p4">Gaur egunean Gaztegune moduan ezagutzen
duguna, lehen hiltegia zen. Fabrika honek,
garai hartako forma eta materiala
(adreiluzkoa eta harlanezkoa) mantentzen du,
hortaz, tximinia zilindrikoa ikus daiteke.
Eraikinaren tipologia eta materiala kontuan
hartuta, 1940 eta 1950 urte bitartekoa da.</string>
    <string name="audio_p5">Buf lagunak, ia ibilbidearen amaieran gaude.
Oraingoan, Landaederreagako Santo Kristo
Baselizan gaude. Lehenengoz 1655an eraiki
zen, nahiz eta, harrezkero, hainbat aldiz
berreraiki izan den. Formari dagokionez, goitik
ikusita ez dauka forma jakinik: besorik gabeko
gurutzearen itxura dauka.</string>
    <string name="audio_p6">Neska-mutilak, hau Abrisketako San Pedro
Baseliza da eta abentura honi amaiera ematen
dion ondare kulturala da. Ermita honek,
erromanikoaren aurretiko estiloen aztarna
arkitektonikoak ditu eta Bizkaiko zaharrena da
(XII. mendearen hasierakoa). Eraikigai gisa
berriro erabilita, barruan hilarri erromatarren
aztarnak aurkitu dira baita irudi
prerromanikoak dituen harearrizko bloke
handi bat ere. Absideko leihoan ere dekorazio
prerromanikoa ikusten da.</string>
    <string name="final_7">Oso ondo! Leku guztiak ezagutu dituzu.
        Bidai honetan ikasitakoarekin hurrengo ariketa egingo duzue.</string>
    <string name="timer_default">00:00</string>
    <string name="timer">Timer</string>
    <string name="jarraitu">Jarraitu</string>
    <string name="errepikatu">Errepikatu</string>
    <string name="amaituta">Amaitu duzu!</string>
    <string name="tituloHorizontalGurutzegrama">Horizontal</string>
    <string name="tituloVerticalGurutzegrama">Bertikal</string>
    <string name="horizontalUno">2.Bizkaiko baseliza zaharrena da.</string>
    <string name="horizontalDos"> 4.Hainbat alditan berreraiki izan den baseliza. </string>
    <string name="horizontalTres">5.Lehen eskola bat zen. </string>
    <string name="horizontalCuatro">6.Vicente Larreak egin zuen.</string>
    <string name="verticalUno">1.Arrigorriagako batailan du jatorria.</string>
    <string name="verticalDos"> 3.Gaur egunean gaztegunea da. </string>
    <string name="horizontalbtnUno">1</string>
    <string name="horizontalbtnDos">2</string>
    <string name="horizontalbtnTres">3</string>
    <string name="horizontalbtnCuatro">4</string>
    <string name="horizontalbtnCinco">5</string>
    <string name="horizontalbtnSeis">6</string>
    <string name="respuestaUno">andramaria magdalena</string>
    <string name="respuestaDos">san pedro baseliza</string>
    <string name="respuestaTres">hiltegia</string>
    <string name="respuestaCuatro">san kristo baseliza</string>
    <string name="respuestaCinco">udaletxea</string>
    <string name="respuestaSeis">larrea eskultura</string>
    <string name="responder">Erantzun</string>
    <string name="p5_hutsuneak_bete_0">Paragrafo honen hutsuneak bete:</string>
    <string name="p5_hutsuneak_bete_1">Ermita hau</string>
    <string name="p5_hutsuneak_bete_2">deitzen da.</string>
    <string name="p5_hutsuneak_bete_5">Hainbat aldiz</string>
    <string name="p5_hutsuneak_bete_3"> forma, besorik gabeko</string>
    <string name="p5_hutsuneak_bete_3_4">da eta honen  </string>
    <string name="p5_hutsuneak_bete_4"> itxurakoa da.</string>
    <string name="p5_hutsuneak_bete_r1"> Landaederreagako Santo Kristo baseliza</string>
    <string name="p5_hutsuneak_bete_r2"> berreraiki</string>
    <string name="p5_hutsuneak_bete_r3"> gurutzearen</string>
    <string name="p2_hutsuneak_bete_1"> Udaletxe berria lehen </string>
    <string name="p2_hutsuneak_bete_2"> bat zen. </string>
    <string name="p2_hutsuneak_bete_3"> Udaletxe zaharra </string>
    <string name="p2_hutsuneak_bete_4"> zen, </string>
    <string name="p2_hutsuneak_bete_5"> baten ondorioz. </string>
    <string name="p2_hutsuneak_bete_6"> Udaletxe berria eraikitzeko, eskola zaharraren, </string>
    <string name="p2_hutsuneak_bete_7"> erabili ziren.</string>
    <string name="p2_hutsuneak_bete_r1"> eskola</string>
    <string name="p2_hutsuneak_bete_r2"> berreraiki</string>
    <string name="p2_hutsuneak_bete_r3"> sute</string>
    <string name="p2_hutsuneak_bete_r4"> harriak</string>
    <string name="zuzendu">Zuzendu</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="main_menu">Main Menu</string>
    <string name="default_images">Default</string>
    <string name="gallery_images">Gallery</string>
    <string name="camera_gallery">Camera / Gallery</string>
    <string name="load_pic">Load Picture</string>
    <string name="load">Load</string>
    <string name="save">Save Photo</string>
    <string name="pause">Pause</string>
    <string name="title_activity_puzzle">PuzzleActivity</string>
    <string name="hint">Argazkia ikusi</string>
    <string name="izena">Mezedes izen bat sartu</string>
    <string name="Larrea_eskultura">Vicente Larrearen obra hau (2002an Bilbotik
etorrita) Arrigorriagako sarreran aurki
dezakegu, polikiroldegiaren ondoan. Ondare
kultural arkitektoniko hau, bere izugarrizko
altueragatik nabarmentzen da.</string>
    <string name="explicacionpunto1">Vicente Larrearen obra hau (2002an Bilbotik etorrita) Arrigorriagako sarreran aurki dezakegu, polikiroldegiaren ondoan. Ondare kultural arkitektoniko hau, bere izugarrizko altueragatik nabarmentzen da."</string>
    <string name="explicacionpunto12">Larrea eskulturaren oinarrizko datuak ikasi dituzuenez, orain honen puzzlea ebatziko duzue. Animo!</string>
    <string name="orden">Hurrengo argazkiak, kronologikoki ordenatu behar duzu. Horretarako argazkiak sakatu. </string>
    <string name="escribirOrden">Idatzi orden zuzena</string>
    <string name="foto_A">A</string>
    <string name="foto_B">B</string>
    <string name="foto_C">C</string>
    <string name="foto_D">D</string>
    <string name="ordenBueno">c,b,a,d</string>
    <string name="ordenBuenoDos">cbad</string>
    <string name="ordenBuenoTres">c, b, a, d</string>
    <string name="EGpreguntaUno">Andra Maria Magdalena eliza ondare kulturala da.</string>
    <string name="EGpreguntaDos">Eliza hau, XXI. mendekoa dela uste da.</string>
    <string name="EGpreguntaTres">Jatorriko eraikuntzatik dena mantenduda.</string>
    <string name="EGpreguntaCuatro">Elizak Arrigorriagako batailan jatorria du.</string>
    <string name="egia">Egia</string>
    <string name="gezurra">Gezurra</string>
    <string name="testPreguntaUno">Zein mendetakoa da?</string>
    <string name="testRespuestaUnoUno">XV.mendekoa</string>
    <string name="testRespuestaUnoDos">XII.mendearen hasierakoa</string>
    <string name="testRespuestaUnoTres">IX.mendekoa</string>
    <string name="testPreguntaDos">Zer ospatzen da baseliza honetan?</string>
    <string name="testRespuestaDosUno">San Pedroko jaia</string>
    <string name="testRespuestaDosDos">Magdalenak</string>
    <string name="testRespuestaDosTres">Karmengo jaiak</string>
    <string name="testPreguntaTres">Ze harri motaz eginda dago?</string>
    <string name="testRespuestaTresUno">Granitoa</string>
    <string name="testRespuestaTresDos">Basaltoa</string>
    <string name="testRespuestaTresTres">Hareharria</string>
    <string name="testPreguntaCuatro">Zein da baseliza honen estilo arkitektonikoa?</string>
    <string name="testRespuestaCuatroUno">Estilo gotikoa</string>
    <string name="testRespuestaCuatroDos">Estilo preerromanikoa</string>
    <string name="testRespuestaCuatroTres">Estilo barrokoa</string>
    <string name="numeroPreguntaTestUno">1/4</string>
    <string name="numeroPreguntaTestDos">2/4</string>
    <string name="numeroPreguntaTestTres">3/4</string>
    <string name="numeroPreguntaTestCuatro">4/4</string>
    <string name="quizPreguntaUno">Gaur eguneko Gaztegunea....</string>
    <string name="quizrespuestaUnoUno">Hilerria izan zen.</string>
    <string name="quizrespuestaUnoDos">Betidanik Gaztegunea izan da.</string>
    <string name="quizrespuestaUnoTres">Lehen hiltegia zen.</string>
    <string name="quizrespuestaDosUno">Hiltegiaren forma originala mantentzen du.</string>
    <string name="quizrespuestaDosDos">Egurrezkoa da.</string>
    <string name="quizrespuestaDosTres">Aurreko guztiak zuzenak dira.</string>
    <string name="quizPreguntaTres">Eraikina....</string>
    <string name="quizrespuestaTresUno">1940 eta 1950 urte bitartekoa da.</string>
    <string name="quizrespuestaTresDos">1960an eraiki zen.</string>
    <string name="quizrespuestaTresTres">Eraikin berria da.</string>
    <string name="numeroPreguntaQuizUno">1/3</string>
    <string name="numeroPreguntaQuizDos">2/3</string>
    <string name="numeroPreguntaQuizTres">3/3</string>
    <string name="p2_argazkia_galdera">Zein da Andra Maria Magdalena Eliza?</string>
    <string name="p0_test_galdera">Zer da ondare kulturala?</string>
    <string name="p0_test_a"> a. Komunitateko kultura bizi irauteko eta
interes handiko ondasun multzoa da.</string>
    <string name="p0_test_b">b. Iraganetik jasotako eta datozen
belaunaldiei transmititzen diren
ondasun multzoa, herriari nortasuna
ematen diona.</string>
    <string name="p0_test_c">c. A eta B zuzenak dira.</string>
    <string name="creditos_usuario_1">David Chacón</string>
    <string name="creditos_usuario_2">Kevin Díaz-Medino</string>
    <string name="creditos_usuario_3">Jon Ander De Castro</string>
    <string name="creditos_usuario_4">Izaro Ouro</string>
    <string name="creditos_usuario_5">Ainhoa Redondo</string>
    <string name="creditos_usuario_6">Fran Rodríguez</string>
    <string name="creditos_usuario_7">Janire Seoane</string>
    <string name="creditos_usuario_8">Endika Torralba</string>
    <string name="creditos_usuario_9">Noelia Vargas</string>
    <string name="creditos_label_1">Garapen taldea</string>
    <string name="creditos_label_2">Testuak/audioak</string>
</resources>